--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flag App</title>
 
-    <link  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js">
-
-    
-
-    <link 
-    rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    />
     >
 
     <link rel="stylesheet" href="style.css">
@@ -28,6 +25,14 @@
         <br>
         <h1>Flag App</h1>
     </header>
+
+    <div class="input">
+        <input 
+        type="text"
+        name="searchBar"
+        id="searchBar"
+        placeholder="search...">
+    </div>
 
     <main class="container mt-4">
         <div class="input"> </div>
